Fix search z-index

--- a/client/styles/Search.module.css
+++ b/client/styles/Search.module.css
@@ -15,6 +15,8 @@
     margin: 0; padding: 0;
     text-align: left;
 
+    z-index: 2;
+
     max-height: calc(50vh - 110px);
     overflow-y: auto;
 
